--- a/css project/buildestate.html
+++ b/css project/buildestate.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Build Estate</title>
@@ -132,9 +133,64 @@
                         <div class="line"></div>
                         <div class="cube"></div>
                     </div>
+                    <div class="contact-info">
+                    <article id="art-one">
+                        <h3>CONTACT US</h3>
+                        <i class="fa fa-mobile-phone"></i>
+                        +0(12) 000 123 3120
+                        <i class="fa fa-envelope"></i>
+                        mail@example.com
+                    </article>
+                    <article id="art-two">
+                        <h3>CONNECT US</h3>
+                        <i class="fa fa-facebook-f"></i>
+                        <i class="fa fa-twitter"></i>
+                        <i class="fa fa-rss"></i>
+                        <i class="fa fa-vk"></i>
+                    </article>
+                    <article id="art-three">
+                        <h3>ADDRESS</h3>
+                        <i class="fa fa-map-marker"></i> 1680 Richmond St. Corner in, ON N58 3d7, USA
+                    </article>
+                    <article id="art-four">
+                        <img src="assets/images/house.png" alt="">
+                    </article>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387190.27990907297!2d-74.25987368715492!3d40.697670064588735!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2srs!4v1582477757986!5m2!1sen!2srs" width="1200" height="600" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                    </div>
+                </section>
+                <!----------------------------- SECTION FOUR--------------------------->
+                <section>
+                    <h2>Mail Us</h2>
+
+                    <div class="cf">
+                        <div class="line"></div>
+                        <div class="cube"></div>
+                    </div>
+                    <div id="input">
+                    <form action="#">
+                        <input type="text" name="name" placeholder="Name" >
+                        <input type="text" name="email" placeholder="Email">
+                        <input type="text" name="telephone" placeholder="Telephone">
+                        <textarea name="message" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                        <input type="submit" name="submit" id="submit">
+                    </form>
+                    </div>   
                 </section>
             </div>
         </main>
+        <footer>
+            <div class="foot">
+              <ul class="cf">
+                <li>Home</li>
+                <li>About</li>
+                <li>Services</li>
+                <li>Stats</li>
+                <li>Agents</li>
+                <li>Testemonials</li>
+            </ul>
+            </div>
+            <p>&copy Build Estate. All Rights Reserved</p>
+        </footer>
     </div>
 </body>
 
