project web design in progress

--- a/Project-Web-Design/index.html
+++ b/Project-Web-Design/index.html
@@ -64,13 +64,26 @@
                 <input type="email" name="email" placeholder="Enter Your email address for newsletter">
                 <button type="button" class="btn">SUBSCRIBE</button>
             </div>
+        </div>
 
-
-
-
+            <!----------------------OUR WORKS ----------------------------------------->
+    <div class="our_works">
+        <div class="ourWorksHeadline">
+            <h5>OUR <span>WORKS</span></h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut rem maiores cum, consectetur ipsa temporibus eius similique?</p>
+        </div>
+        <div class="portfolio">
+            <img src="img/portfolio-1.png">
+            <img src="img/portfolio-2.png">
+            <img src="img/portfolio-3.png">
+            <img src="img/portfolio-4.png">
+            <img src="img/portfolio-5.png">
+            <img src="img/portfolio-6.png">
 
         </div>
 
+
+    </div>
 
 
 
