--- a/DOM_exercise/index.html
+++ b/DOM_exercise/index.html
@@ -10,7 +10,26 @@
 </head>
 
 <body>
-    <form action=""></form>
+    <!-- <ul>
+        <li>Prvi</li>
+        <li>Drugi</li>
+        <li>Treci</li>
+    </ul>
+    <ul id="secList">
+        <li>Home</li>
+        <li>Contact</li>
+        <li>About</li>
+    </ul> -->
+
+<div>
+
+
+    
+</div>
+
+
+
+
 
 
 
