jQuery and AJAX

--- a/AJAX/XML/index.html
+++ b/AJAX/XML/index.html
@@ -9,11 +9,19 @@
 </head>
 
 <body>
-    <form action="https://www.geoplugin.com/webservices/xml" method="GET">
-        <input type="text" value=''>
-    </form>
+    <!-- 
+    <input type="text" value=''>
+    <button>CLICK ME</button> -->
 
-    <button>CLICK ME</button>
+    <!-- <button>Click me</button> -->
+
+    <select name="" id="">
+        <option value="basenji">basenji</option>
+        <option value="cotondetulear">cotondetulear</option>
+        <option value="husky">husky</option>
+    </select>
+
+
 
 
 
