gitHub exercise I part

--- a/AJAX/jQuery_AJAX/index.html
+++ b/AJAX/jQuery_AJAX/index.html
@@ -9,11 +9,16 @@
 </head>
 
 <body>
+    <!-- header -->
     <div id="container">
         <h1>GitHubSearcher</h1>
-        <form action="">Search <input type="search" size="40"></form>
+        <div>
+            <input type="search" size="40" value="">
+            <button>Search</button>
+        </div>
     </div>
-
+    <!-- users -->
+   <div id="divParent"></div>
 
 
 
