gitHub exercise II part

--- a/AJAX/jQuery_AJAX/index.html
+++ b/AJAX/jQuery_AJAX/index.html
@@ -18,7 +18,9 @@
         </div>
     </div>
     <!-- users -->
-   <div id="divParent"></div>
+
+    <div id="repoInfo"></div>
+    <div id="divParent"></div>
 
 
 
