--- a/AJAX/YouTube_project/index.html
+++ b/AJAX/YouTube_project/index.html
@@ -10,21 +10,21 @@
 </head>
 
 <body>
+
+    <header>
+        <img src="img/logo_YT.png">
+        <div class="searchWrapper">
+            <input type="search" name="search" placeholder="Search for videos">
+            <button><i class="fa fa-search" style="font-size:24px"></i></button>
+        </div>
+    </header>
     <div class="container">
-        <header>
-            <img src="img/logo_YT.png">
-            <div>
-                <input type="search" name="search" placeholder="Search for videos">
-                <button><i class="fa fa-search" style="font-size:24px"></i></button>
-            </div>
-        </header>
+        <iframe width="560" height="315" src="" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <div id="videoGallery"></div>
+
     </div>
-    <iframe width="560" height="315" src="" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-    <div id="videoGallery"></div>
-
-
 
 
 
