--- a/BitShow_Project/movieInfo.html
+++ b/BitShow_Project/movieInfo.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styleTwo.css">
     <title>Movie Info</title>
 </head>
 
@@ -20,11 +20,13 @@
 
         </form>
     </nav>
+    <div id="container"></div>
 
 
 
-
-
+<footer id="footer">
+    <p>Copyright &copy Bit Student 2020</p>
+</footer>
 
 
 
