--- a/BitShow_Project/index.html
+++ b/BitShow_Project/index.html
@@ -16,11 +16,13 @@
         <a class="navbar-brand">BitShow</a>
         <form class="form-inline">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button>Search</button>
-
         </form>
     </nav>
-    
+    <div class="dropdown">
+        <ul>
+            
+        </ul>
+    </div>
 
     <h1>Popular Shows</h1>
     <div id="container"></div>
