--- a/BitShow_Project/index.html
+++ b/BitShow_Project/index.html
@@ -19,9 +19,7 @@
         </form>
     </nav>
     <div class="dropdown">
-        <ul>
-            
-        </ul>
+        <ul> </ul>
     </div>
 
     <h1>Popular Shows</h1>
@@ -30,7 +28,9 @@
 
 
 
-
+    <footer id="footer">
+        <p>Copyright &copy Bit Student 2020</p>
+    </footer>
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
