Finishing uncompleted projects...

--- a/Projects/Project-Web-Design/index.html
+++ b/Projects/Project-Web-Design/index.html
@@ -131,16 +131,31 @@
                 <div class="icons-social"><img src="img/social-icons-new-bw.png"></div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, illo.</p>
             </div>
-
         </div>
-
     </div>
-
-
-
-
-
-
+    <!-----------------------------------------SAY HELLO----------------------------------------------->
+    <div class="say-hello">
+        <div class="sayHello-titleDiv">
+            <h5>SAY <span>HELLO</span></h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut rem maiores cum, consectetur ipsa
+                temporibus eius similique?</p>
+        </div>
+        <div class="sayHello-form">
+            <div class="wrapper">
+            <input type="email" name="email" id="say-hello-email" placeholder="Your Email">
+            <input type="text" placeholder="Subject">
+            </div>
+            <textarea name="" id="" cols="60" rows="7" placeholder="Your Message"></textarea>
+            <div class="wrapper">
+            <button type="button" class="btn">HIRE US</button>
+            <img src="img/social-icons.png" alt="">
+            </div>
+        </div>
+    </div>
+<!--------------------------------------------------FOOTER------------------------------------------------------------->
+ <footer>
+     <p>&copy 2015 COPYRIGHT DESIGN STUDIO</p>
+ </footer>
 
 
 
